<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/buscador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/Lupa"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <EditText
                android:id="@+id/Ed_Buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/imageBuscar"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Buscar"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:text=""
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageborrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:contentDescription="@string/cerrar"
                android:paddingStart="5dp"
                android:visibility="invisible"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/nombre_perfil"
            >
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" >



    </androidx.viewpager.widget.ViewPager>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>