<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:orientation="vertical"
    tools:context=".Detalle">
    <TextView
        android:id="@+id/Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.612" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/Foto">


        <LinearLayout
            android:id="@+id/contenedor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent">
            <RelativeLayout
                android:id="@+id/imagenes"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <ImageView
                android:id="@+id/Foto"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/todo"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:textAlignment="center" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="@+id/Foto"
                    android:layout_marginTop="15dp"
                    android:paddingTop="30dp"
                    android:visibility="visible" />

            </RelativeLayout>

            <TextView
                android:id="@+id/Tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Municipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Dirrecion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp" />


            <com.codesgood.views.JustifiedTextView
                android:id="@+id/Detalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="fill_vertical"
                android:paddingTop="2dp"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/botones"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_aceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:onClick="cerrar"
                    android:text="@string/Aceptar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btn_maps"
                    android:layout_width="154dp"
                    android:layout_height="52dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:drawableStart="@drawable/icon_maps"
                    android:onClick="Maps_google"
                    android:text="@string/google_maps"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>